# peltier.io

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  justfile
.agents/skills/peltier/: SKILL.md
.agents/skills/peltier/references/: attempt.md  verify.md
.agents/skills/peltier/scripts/: preflight.sh
.claude/skills/peltier/: SKILL.md
.claude/skills/peltier/assets/: accept.template.toml
.claude/skills/peltier/reference/: verify.md
.claude/skills/peltier/references/: attempt.md  verify.md
.claude/skills/peltier/scripts/: preflight.ps1
.github/workflows/: ci.yml  docs.yml
agent/: pyproject.toml
agent/hotpath_agent/: __init__.py  harness.py  loop.py  mcp_server.py  prompts.py  tools.py
config/: accept.toml  pricing.toml
corpora/: README.md
corpora/cjson/: GOLDEN.sha256  MANIFEST.sha256  gen-corpus.sh
corpora/comrak/: GOLDEN.sha256  MANIFEST.sha256  gen-corpus.sh
corpora/tokei/: GOLDEN.sha256  MANIFEST.sha256  gen-corpus.sh
crates/bench-runner/: Cargo.toml
crates/bench-runner/src/: config.rs  counters.rs  exec.rs  fingerprint.rs  lib.rs  main.rs  schedule.rs  service.rs  stats.rs
crates/diff-test/: Cargo.toml
crates/diff-test/src/: lib.rs  main.rs  orchestrate.rs  pin.rs  policy.rs  target.rs
crates/explain/: Cargo.toml
crates/explain/src/: lib.rs  main.rs
crates/harnessd/: Cargo.toml
crates/harnessd/src/: allowlist.rs  daemon.rs  main.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs  main.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs  main.rs  pricing.rs
crates/verdict/: Cargo.toml
crates/verdict/src/: main.rs  risk.rs
docs/: book.toml  infra.md
docs/src/: SUMMARY.md  agent-loop.md  architecture.md  equivalence.md  explain.md  infra.md  introduction.md  isolation.md  measurement.md  playbook.md  reproduce.md  research-forks.md  roadmap.md  roi.md  skill.md  thesis.md
docs/src/case-studies/: build-flags.md  cjson.md  comrak-false-accept.md  overview.md  service.md  tokei.md
docs/theme/: custom.css
playbook/: 01-build-config.md  02-allocator.md  03-allocation-churn.md  04-data-layout.md  05-algorithmic.md  06-simd.md  07-concurrency.md  README.md
results/: adversarial-review.md  ledger.sqlite
results/calibration/: 2026-07-06-comrak-aa-pinned.txt  2026-07-06-comrak-aa.txt  2026-07-06-comrak-full-calibration.json  2026-07-06-tokei-aa-pinned.txt  2026-07-09-gh-runner-20session.md  README.md  cjson-aa.json  cjson-service-aa.json
results/cjson/: hotspots.txt
results/cjson/coz/: README.md
results/comrak/: callgrind-cache.out  hotspots.txt
results/pending/: ff886433fec9.json.diff
results/phase0/: attempt1-bench.txt  attempt2-bench.txt  attempt3-bench.txt  attempt4-bench.txt  attempt5-bench.txt  attempts.md  case-study-comrak.md  case-study-tokei.md  comrak-mimalloc.patch  tokei-combined.patch  tokei-fatlto.patch  tokei-readpath.patch
results/phase2/: case-study-agent-loop.md  phase2-comrak-001-transcript.txt  phase2-comrak-002-transcript.txt  phase2-comrak-003-transcript.txt  transcript-tokei-001.txt  transcript-tokei-002.txt
results/phase3/: 01-tokei-algorithmic-rust.md  02-build-flags-and-allocators.md  03-comrak-caught-false-accept.md  04-cjson-c-target.md  README.md
results/phase4/: README.md  cjson-service-roi.md
results/phase5/: README.md  kernel-lane.txt  learned-policy.txt
results/rulings/: phase0-comrak-002.md
results/tokei/: callgrind-cache.out  hotspots.txt
scripts/: agent-isolated.sh  audit-attempt.py  coz-profile.sh  coz-summary.py  diff-fuzz-cjson.py  diff-fuzz-comrak.py  diff-fuzz-tokei.py  install-coz.sh  install-skill.sh  isolation-check.sh  kernel-lane-demo.sh  no-net.sh  phase4-record.py  pin-testsuite.sh
targets/: README.md  fetch.sh
targets/cjson/: harness.c  service.c  target.toml
targets/comrak/: target.toml
targets/matmul/: equivalence.toml  kernel.c
targets/tokei/: target.toml
