[workspace]
resolver = "2"
# Vendored target checkouts are their own workspaces, never part of ours.
exclude = ["targets"]
members = [
    "crates/bench-runner",
    "crates/diff-test",
    "crates/ledger",
    "crates/report",
    "crates/verdict",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/bdbrown4/peltier.io"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
