[project]
name = "hotpath-agent"
version = "0.1.0"
description = "hotpath optimization agent: the untrusted proposer in the profile→patch→verdict loop"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hotpath_agent"]
