[package]
name = "diff-test"
description = "Layered equivalence gates: upstream tests, golden replay, differential fuzzing, sanitizers; hash-pinned corpora"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# The crate ships two binaries — the `diff-test` gate driver and the
# `fp-compare` kernel-lane helper (src/bin/fp-compare.rs). Name the primary
# one so `cargo run -p diff-test` stays unambiguous (CI runs it as the
# per-target gate: `cargo run -p diff-test -- <target>`).
default-run = "diff-test"

[dependencies]
anyhow.workspace = true
serde.workspace = true
clap.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
