[package]
name = "ledger"
description = "Append-only SQLite attempt ledger: audit trail, anti-double-attempt memory, future training set"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
