[package]
name = "report"
description = "ROI reports from ledger rows: throughput→cores→dollars with CIs, workload statement, and env fingerprint on every figure"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ledger = { path = "../ledger" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
